Fix docs with new sources

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -95,7 +95,7 @@ explained.
 
 <HisyeoTabs>
     <p>foxo.&emsp;<em>woah!</em></p>
-    <p>nû kûu li lô cî.&emsp;<em>Let's go!</em></p>
+    <p>nûs kûu li nô cî.&emsp;<em>Let's go!</em></p>
     <p>(nîmû) (li gô) bi zik.&emsp;<em>How are you doing?</em></p>
     <p>(noyo) (li gô) bi xôn.&emsp;<em>I am well.</em></p>
     <p>lono nîmû li sî gô bi zik.&emsp;<em>How has your day been?</em></p>
