--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -62,7 +62,7 @@ clause we learned about above. It indicates that an *action* is what is desired
 
 <HisyeoTabs>
     <p>noyo monodo nîo hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
-    <p>nû kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
+    <p>nûs kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
     <p>nîmû fôlun xe monodo noyo hoî cihôû ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
 
@@ -124,7 +124,7 @@ question or the negatitive marker (<HisyeoWord is='yôk'/>) or both.
 <HisyeoTabs>
     <p>nîmû mokon ofek noyo hoî lono uklo cî.&emsp;<em>"Does you eating with me tomorrow sound good?"</em></p>
     <p>mokon.&emsp;<em>"Yes."</em></p>
-    <p>nû côûfon ôfo cî.&emsp;<em>"Let's cook this!"</em></p>
+    <p>nûs côûfon ôfo cî.&emsp;<em>"Let's cook this!"</em></p>
     <p>yôk.&emsp;<em>"No."</em></p>
     <p>nîmû monodo nîo cî.&emsp;<em>"Do you agree to meet them?"</em></p>
     <p>monodo yôk.&emsp;<em>"I don't."</em></p>
@@ -148,7 +148,7 @@ make more formal approval setnences by making use of the verb "to agree".
 
 <HisyeoTabs>
     <p>û nîmû ôlê zowo onô mokon êo hoî bitûn ôfo cî.&emsp;<em>"You will feed the dog tonight, sound good?"</em></p>
-    <p>noyo wofok yôk nênko fos noyo kûu li lô mût dênêmêk yê zomo kîôsô noyo.&emsp;<em>"I do not agree because I must go to my team's practice."</em></p>
+    <p>noyo wofok yôk nênko fos noyo kûu li nô mût dênêmêk yê zomo kîôsô noyo.&emsp;<em>"I do not agree because I must go to my team's practice."</em></p>
 </HisyeoTabs>
 
 #### Pro-Form Questions
@@ -205,9 +205,9 @@ that the second verb is being intepreted as the object of the active verb
 preposition. The fourth sentence makes use of the interrogative sentence ender.
 
 <HisyeoTabs>
-    <p>nû kûu monodo bi dîzel zelen cî.&emsp;<em>Let's meet again soon, ok?</em></p>
+    <p>nûs kûu monodo bi dîzel zelen cî.&emsp;<em>Let's meet again soon, ok?</em></p>
     <p>hoî wokût zik û noyo kôî dêko nîmû bi dîzel.&emsp;<em>When can I see you again?</em></p>
-    <p>nû kôî dôstoc îskô hoî bitûn yê lono unbol cî.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
+    <p>nûs kôî dôstoc îskô hoî bitûn yê lono unbol cî.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
     <p>nîmû li fôlnî hoî suhot tukwos yê bitûn ôfo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
     <p>noyo xîwon xe dêko nîmû bi zelen êto lôîcôk.&emsp;<em>I so hope to see you very soon!</em></p>
 </HisyeoTabs>
