--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -258,7 +258,7 @@ In order to indicate a specific day use one of the demonstrative pronouns
 can use a day as a condition in a hôn prepositional phrase:
 
 <HisyeoTabs>
-  <p>hôn xokôn lono xolxîlî, û nû li sî lô bi xobêk mût motûo sênzô</p>
+  <p>hôn xokôn lono xolxîlî, û nûs li sî nô bi xobêk mût motûo sênzô</p>
   <em>"Every Sunday, we used to go to grandpa's"</em>
 </HisyeoTabs>
 
@@ -520,7 +520,7 @@ a duration/length of time we use a different particle meant for distances and
 durations.
 
 <HisyeoTabs>
-  <p>nû tûu sî lon nonkû suhot&emsp;<em>"We did that for four hours"</em></p>
+  <p>nûs tûu sî lon nonkû suhot&emsp;<em>"We did that for four hours"</em></p>
 </HisyeoTabs>
 
 ### Exact Times
@@ -597,7 +597,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hôn tûek yê wêîlun û cingî mêtlîôs yûnyoû zôtêstô len oxon xe êo lô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut sûnkon.</p>
+  <p>hôn tûek yê wêîlun û cingî mêtlîôs yûnyoû zôtêstô len oxon xe êo nô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut sûnkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
