--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>niswî sûtûô li cok sûn zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nû buswen niswî dus tîû êfun oxon xe bîek ni sûwît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nûs buswen niswî dus tîû êfun oxon xe bîek ni sûwît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -201,7 +201,7 @@ each individual within a group.
 
 <HisyeoTabs>
     <p>kûu li gufis yê fos nîmû xûsten xokôn xolu bi xôn.&emsp;<em>Make sure you wash each bowl well.</em></p>
-    <p>bînton lono onô li lô bi cên hoî xokôn lono hêlxun ûn li lô bi sêl hoî xokôn bitûn.&emsp;<em>The sun comes up each morning and sets each night.</em></p>
+    <p>bînton lono onô li nô bi cên hoî xokôn lono hêlxun ûn li nô bi sêl hoî xokôn bitûn.&emsp;<em>The sun comes up each morning and sets each night.</em></p>
     <p>môî umo xe hoî kûncên onô, dî sî totsi ûn hokûxi.&emsp;<em>Every person in the room stood and cheered.</em></p>
 </HisyeoTabs>
 
@@ -212,11 +212,11 @@ the distance/duration thematic relation (<HisyeoWord is='lon'/>) has subtle
 differences in interpretations.
 
 <HisyeoTabs>
-    <p>nû ke nîltûgu xe li lô bi fîkî, hoî 5 mônbili xokôn.&emsp;<em>"We will stop running at 5 miles"</em></p>
+    <p>nûs ke nîltûgu xe li nô bi fîkî, hoî 5 mônbili xokôn.&emsp;<em>"We will stop running at 5 miles"</em></p>
     <p>nîmû ke dôstoc îskô hoî môî 5 mônbili xokôn.&emsp;<em>"You will get a drink every 5 miles"</em></p>
-    <p>ke li ônî lô fîkî bêsu hoî xokôn 5 mônbili xokôn.&emsp;<em>"There will be a different runner each 5 miles" </em></p>
-    <p>nû ke li lô bi fîkî lon 5 mônbili xokôn.&emsp;<em>"We will run for 5 miles"</em></p>
-    <p>ke li ônî lô fîkî bêsu lon môî 5 mônbili xokôn.&emsp;<em>"There will be a different runner for every 5 mile stretch"</em></p>
+    <p>ke li ônî nô fîkî bêsu hoî xokôn 5 mônbili xokôn.&emsp;<em>"There will be a different runner each 5 miles" </em></p>
+    <p>nûs ke li nô bi fîkî lon 5 mônbili xokôn.&emsp;<em>"We will run for 5 miles"</em></p>
+    <p>ke li ônî nô fîkî bêsu lon môî 5 mônbili xokôn.&emsp;<em>"There will be a different runner for every 5 mile stretch"</em></p>
     <p>nîmû ke dôstoc îskô dîzel lon xokôn 5 mônbili xokôn.&emsp;<em>"You get another drink for each 5 mile stretch"</em></p>
 </HisyeoTabs>
 
