--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -222,9 +222,9 @@ proper way to formulate the desired semantic meaning.
 
 1. ⛔ Towards; in the direction of. 
 <HisyeoTabs>
-  <p>umo kôsmô li lô mût mûêsî.&emsp;<em>The astronauts headed for the moon.</em></p>
-  <p>kûu li lô bi fîkî mût bûmî tôxûtsi.&emsp;<em>Run for the hills!</em></p>
-  <p>nîo li lô mût zinkon hôn wokût fos nîo bunyentoc sî hoî.&emsp;<em>He was headed for the door when he remembered.</em></p>
+  <p>umo kôsmô li nô mût mûêsî.&emsp;<em>The astronauts headed for the moon.</em></p>
+  <p>kûu li nô bi fîkî mût bûmî tôxûtsi.&emsp;<em>Run for the hills!</em></p>
+  <p>nîo li nô mût zinkon hôn wokût fos nîo bunyentoc sî hoî.&emsp;<em>He was headed for the door when he remembered.</em></p>
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
@@ -233,7 +233,7 @@ proper way to formulate the desired semantic meaning.
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
   <p>hôn môî fin fos noyo tûu, û noyo tûu oxon nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
-  <p>nû yûnyoû kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
+  <p>nûs yûnyoû kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
   <p>ônî bôklôn cûdo sî kôto in ondo oxon kôndodû kon cûdo yôûlî.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
@@ -248,9 +248,9 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
-  <p>noî môî umo xe oxon bêsnêhot, kûu li êo lô bi mulô ôlê zûngô nîmû.&emsp;<em>All those for the motion, raise your hands.</em></p>
+  <p>noî môî umo xe oxon bêsnêhot, kûu li êo nô bi mulô ôlê zûngô nîmû.&emsp;<em>All those for the motion, raise your hands.</em></p>
   <p>zik oxon mozûn bukû.&emsp;<em>Who's for ice-cream?</em></p>
-  <p>noyo oxon xe li lô tô oûtô kîskô.&emsp;<em>I'm for going by train.</em></p>
+  <p>noyo oxon xe li nô tô oûtô kîskô.&emsp;<em>I'm for going by train.</em></p>
   <p>dus gôcîdon sî oxon ûn niswî dên.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
@@ -275,7 +275,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 11. ⛔ Used to introduce a subject of a to-infinitive clause.
 <HisyeoTabs>
-  <p>fos ônî fiyûxît nû cûdo yôk munî oksîôs nû, li yôk ûsowo.&emsp;<em>It is unreasonable for our boss to withhold our wages.</em></p>
+  <p>fos ônî fiyûxît nûs cûdo yôk munî oksîôs nûs, li yôk ûsowo.&emsp;<em>It is unreasonable for our boss to withhold our wages.</em></p>
   <p>noyo bi tôlkî fôlun fos nîmû li xowosê.&emsp;<em>All I want is for you to be happy.</em></p>
 </HisyeoTabs>
 12. ✅ On behalf of.
@@ -296,9 +296,9 @@ proper way to formulate the desired semantic meaning.
 <HisyeoTabs>
   <p>noyo belêxu oxon mûlû xe hoî kônyêc kûngîyo yê lono cinôbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
   <p>nîo bêûdo oxon cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
-  <p>nîmû fôlun xe li lô oxon îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
+  <p>nîmû fôlun xe li nô oxon îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
   <p>umo xe niwos hoî môî boxô yê kûôcyo Elofo, dîyondê sî umo Delfi oxon zuwobû.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
-  <p>nîmû kôî li lô mût gufuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
+  <p>nîmû kôî li nô mût gufuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wêko munî bi sôbo oxon oûtô.&emsp;<em>I'm saving up for a car.</em></p>
   <p>kûu motsi yôk oxon zuwobû.&emsp;<em>Don't wait for an answer.</em></p>
   <p>nîo sôlû mût nîmû oxon zik.&emsp;<em>What did he ask you for?</em></p>
@@ -320,13 +320,13 @@ proper way to formulate the desired semantic meaning.
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
   <p>oxon nixîn yê tîmîok pipôk.&emsp;<em>O for the wings of a dove.</em></p>
-  <p>oxon nixîn fos li lô tô nu.&emsp;<em>Ah! for wings to soar …</em></p>
+  <p>oxon nixîn fos li nô tô nu.&emsp;<em>Ah! for wings to soar …</em></p>
   <p>hôn îbûdû oxon côûfon yê cêo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
   <p>tûu kon dodê tô woyû in besol nu. hôn kut fin û noyo kôî dodê yôk lôîcôk.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
-  <p>hôn dîzel nû yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
+  <p>hôn dîzel nûs yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
@@ -490,10 +490,10 @@ either specified by this noun phrase or is reached when the destination
 specified is reached.
 
 <HisyeoTabs>
-    <p>noyo li lô mût gufuyo hoî suhot tukwos yê bitûn xobêk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
-    <p>noyo li lô mût gufuyo lon suhot tukwos hoî bitûn xobêk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
-    <p>nîo bi fîkî li lô mût gîto kônyêc lon xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
-    <p>nîo bi fîkî li lô mût gîto kônyêc hoî xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
+    <p>noyo li nô mût gufuyo hoî suhot tukwos yê bitûn xobêk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
+    <p>noyo li nô mût gufuyo lon suhot tukwos hoî bitûn xobêk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
+    <p>nîo bi fîkî li nô mût gîto kônyêc lon xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
+    <p>nîo bi fîkî li nô mût gîto kônyêc hoî xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
 </HisyeoTabs>
 
 To better understand why it's necessary to distinguish this from location/time,
@@ -540,7 +540,7 @@ In English, this represents some senses of the word "between" or "through".
 
 <HisyeoTabs>
   <p>noyo kôî mokon wutun hôfezî xe gitno bîek wutun.&emsp;<em>"I could eat a hamburger."</em></p>
-  <p>nû kûu tuluti gitno tohilôk pûmi onô oxon xe bucono wokût.&emsp;<em>"We should go through the mountains to save time."</em></p>
+  <p>nûs kûu tuluti gitno tohilôk pûmi onô oxon xe bucono wokût.&emsp;<em>"We should go through the mountains to save time."</em></p>
   <p>nîmû kôî dêko oûtô onô gitno kûmun obokî zonûbî onô ko.&emsp;<em>"Can you see the car through the south window?"</em></p>
   <p>gitno nîmû ûn noyo û hîskûnco in kôson Hîsyêô li xôn môî&emsp;<em>"Between you and me, Hîsyêô is the best conlang."</em></p>
 </HisyeoTabs>
@@ -562,7 +562,7 @@ it can also represent the English phrase "as if".
 
 <HisyeoTabs>
   <p>xoînbo dêko û loi misli siskin loi.&emsp;<em>"He looks like his brother."</em></p>
-  <p>sî tûu cô kûnhîun bîs û umo moskûl nokdo misli xe ke zîgîl.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
+  <p>sî tûu cô kûnhîun lôc û umo moskûl nokdo misli xe ke zîgîl.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
   <p>golfon onô fos noyo oncêmon ni cihôû xe dêko non foko ôsôlê yê kônyêc wêxôn fêlcîn misli yôk ozûul fin fos noyo oncêmon sî hoî ôhêl.&emsp;<em>The disgust I felt after watching last weekend's horror movie was unlike anything I had felt before.</em></p>
   <p>umo Kiloûdîo bi xûnyu cokyen îskô fin cûbû misli yôk umo Filit fos poxô kon îskô cûbû bi cokyen li niwos dûî yê.&emsp;<em>Claudia hardly ever drinks beer or wine, unlike Phillip, for whom the bar is practically a second home.</em></p>
   <p>xe li mûun, misli yôk nîo&emsp;<em>Being late is unlike him.</em></p>
@@ -901,7 +901,7 @@ genitive phrase must contain concepts of time or duration.
 <HisyeoTabs>
   <p>tûu yê tukwos suhot&emsp;<em>"work for eight hours"</em> <small>(lit. action of eight hours)</small></p>
   <p>wokût kon mokon yê suhot xêtî&emsp;<em>"breakfast at seven o'clock"</em> <small>(lit. eating time of the seventh hour)</small></p>
-  <p>lô yê bitûn&emsp;<em>"movement during the night"</em> <small>(lit. movement of night)</small></p>
+  <p>nô yê bitûn&emsp;<em>"movement during the night"</em> <small>(lit. movement of night)</small></p>
 </HisyeoTabs>
 
 You can clarify that a genitive relationship is Time by using <HisyeoWord is='wokût'/>:
@@ -913,7 +913,7 @@ You can clarify that a genitive relationship is Time by using <HisyeoWord is='wo
 You can also clarify this relationship using a subordinate clause and the preposition <HisyeoWord is='hoî'/>:
 
 <HisyeoTabs>
-  <p>lô xe (li gô) hoî bitûn&emsp;<em>"movement during the night"</em> <small>(lit. movement which is at night)</small></p>
+  <p>nô xe (li gô) hoî bitûn&emsp;<em>"movement during the night"</em> <small>(lit. movement which is at night)</small></p>
 </HisyeoTabs>
 
 ---
@@ -1002,20 +1002,20 @@ appropriate type.
 
 <HisyeoTabs>
   <p>kôto yê ônî hobîyô onô&emsp;<em>"speech of the announcer"</em></p>
-  <p>lô yê hôktun xômûtlô cênbô&emsp;<em>"movement of whales"</em> <small>(lit. movement of big sea mammals)</small></p>
+  <p>nô yê hôktun xômûtlô cênbô&emsp;<em>"movement of whales"</em> <small>(lit. movement of big sea mammals)</small></p>
 </HisyeoTabs>
 
 You can also represent this genitive relationship by replacing the whole relation with
 a subordinate noun clause:
 
 <HisyeoTabs>
-  <p>fos hôktun xômûtlô cênbô li lô, li kûzoû&emsp;<em>"movement of whales is awesome" (lit. that big sea mammals are moving, is awesome)</em></p>
+  <p>fos hôktun xômûtlô cênbô li nô, li kûzoû&emsp;<em>"movement of whales is awesome" (lit. that big sea mammals are moving, is awesome)</em></p>
 </HisyeoTabs>
 
 You can also clarify this genitive relationship with <HisyeoWord is='kôs'/>:
 
 <HisyeoTabs>
-  <p>lô yê kôs yê hôktun xômûtlô cênbô&emsp;<em>"movement of whales"</em> <small>(lit. movement of result of big sea mammals)</small></p>
+  <p>nô yê kôs yê hôktun xômûtlô cênbô&emsp;<em>"movement of whales"</em> <small>(lit. movement of result of big sea mammals)</small></p>
 </HisyeoTabs>
 
 ---
@@ -1027,7 +1027,7 @@ are English equivalent expressions. This genitive can always be converted into a
 sentence where the genitive noun phrase is the object of the action.
 
 <HisyeoTabs>
-  <p>kôto nû yê mocko&emsp;<em>"our conversation about cats"</em> <small>(lit. our speech of cats)</small></p>
+  <p>kôto nûs yê mocko&emsp;<em>"our conversation about cats"</em> <small>(lit. our speech of cats)</small></p>
   <p>kelo yê fos sinsî noyo (li gô) dên sinsî dîzel onô&emsp;<em>"a game of my city against the other city"</em> <small>(lit. game of which my city (is) against another city)</small></p>
 </HisyeoTabs>
 
@@ -1036,7 +1036,7 @@ a subordinate noun clause while describing the object (and <HisyeoWord is='kôs'
 be used to intepret "about" more appropriately):
 
 <HisyeoTabs>
-    <p>nû kôto sî sin yê selôhô yê mocko&emsp;<small>(lit. we said things of a topic of cats)</small></p>
+    <p>nûs kôto sî sin yê selôhô yê mocko&emsp;<small>(lit. we said things of a topic of cats)</small></p>
     <p>sinsî noyo kelo sî dên sinsî dîzel&emsp;<small>(lit. my city played against another city)</small></p>
 </HisyeoTabs>
 
@@ -1125,8 +1125,8 @@ the second particle (<HisyeoWord is='foko'/>), the agent is causing something
 else to engage in the action or experience the state.
 
 <HisyeoTabs>
-    <p>foko mefûs wowoê yê kon lô fîkî&emsp;<em>"running shoes"</em><small>(lit. foot safe-causer of fast moving)</small></p>
-    <p>ônî lô fîkî&emsp;<em>"runner"</em><small>(lit. fast mover)</small></p>
+    <p>foko mefûs wowoê yê kon nô fîkî&emsp;<em>"running shoes"</em><small>(lit. foot safe-causer of fast moving)</small></p>
+    <p>ônî nô fîkî&emsp;<em>"runner"</em><small>(lit. fast mover)</small></p>
     <p>fecko foko hûnsik&emsp;<em>"red paint"</em><small>(lit. red-causer liquid)</small></p>
     <p>ônî wêko yê fecko foko longi&emsp;<em>"painter"</em><small>(lit. placer of color-causer liquid)</small></p>
 </HisyeoTabs>
@@ -1258,7 +1258,7 @@ description of the **direct object** as a relative clause.
 
 <HisyeoTabs>
     <p>bi fos bi ubênus wuîtsî xe ogolol, noyo lunsol sî gundolê nubuso yê zomo onô bi len sumon en fos noyo kôî tûu.&emsp;<em>"Barely keeping a grip on it, I throw the dog's wet ball as hard as I can."</em></p>
-    <p>bi fos unon îskô cûbû ûn bîek sûn, nû dênêmêk xe yosten gufuyo kon îskô onô hoî sinsî cûtî onô.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
+    <p>bi fos unon îskô cûbû ûn bîek sûn, nûs dênêmêk xe yosten gufuyo kon îskô onô hoî sinsî cûtî onô.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
     <p>bi xe sityo hoî môtô onô, li zowo xe tô hokôlî ogolol sî siskin wohî nîmû.&emsp;<em>"Sitting by the fire was the dog that bit your sister."</em></p>
 </HisyeoTabs>
 
