--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -50,7 +50,7 @@ are usually considered to be imperfective and not perfect (since there is a
 particle that can specify that the action is perfect).
 
 <HisyeoTabs>
-    <p>hoî wokût zik û nû mokon hoî bitûn cokyen ôfo.&emsp;<em>What time are we eating this evening?</em></p>
+    <p>hoî wokût zik û nûs mokon hoî bitûn cokyen ôfo.&emsp;<em>What time are we eating this evening?</em></p>
     <p>fonolon lunsol îbûwê mût noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
 </HisyeoTabs>
 
@@ -79,10 +79,10 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo kôî sityo hoî ulyô ko.&emsp;<em>May I sit there?</em></p>
     <p>mocko yê umo Xilôdingu kôî li gô yodo kôî li yôk gô hoî dibo dîncî.&emsp;<em>Schrôdinger's cat may or may not be in the box</em></p>
     <p>nîmû kôî kôto sî bi sêlôhô yê bôkbûn&emsp;<em>You might have warned me about the thunderstorm.</em></p>
-    <p>noyo kôî li lô mût kôndodû onô lêkin noyo gôcîdon sî yôk bi ôhêl.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo kôî li nô mût kôndodû onô lêkin noyo gôcîdon sî yôk bi ôhêl.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo kôî li gô hoî sityo kûldû lêkin noyo bi môcîbo fôlun fos wêîlun mût noyo misli umo wohî.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo kôî gomî bîek botuk sûwît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
-    <p>nû kôî buswen fin xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nûs kôî buswen fin xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nîmû kôî tenkîn ulyô ko.&emsp;<em>Can you hear that?</em></p>
     <p>nîo kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
@@ -95,7 +95,7 @@ explicitly described or implied.
 
 <HisyeoTabs>
     <p>hôn fos noyo bît li bîlûs hoî xe kôntêsto oxon yokûntîk, û noyo bît cûdo fun dûî munî mût kûngîyo yôûlî.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
-    <p>noyo bît yûbik xe li lô monodo.&emsp;<em>I would love to come and visit.</em></p>
+    <p>noyo bît yûbik xe li nô monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>kûu dêko bîek sûwît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo mût nîmû bît sôlû xe sityo bi koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo mût gonîso fos nîo li sî cok bi ilik.&emsp;<em>I would imagine that they have already left.</em></p>
@@ -140,7 +140,7 @@ surpassed.
 <HisyeoTabs>
     <p>hôn fos nîo bît sôlû mût noyo, û noyo ke fohoso bêsnêhot nîo bi dîyondê êto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
     <p>hôn fos nîmû bît li êo foût, umo ke fisun êo ôlê nîmû.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
-    <p>hôn fos bît li hûzon cihoû lono mutyu ôfo, kûu li lô mût boxô noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
+    <p>hôn fos bît li hûzon cihoû lono mutyu ôfo, kûu li nô mût boxô noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
     <p>hôn fos nîmû bît li cok hoî îbûdû, û nîmû ke doîcêl oûtô kîskô nîmû lôîcôk.&emsp;<em>If you leave now, you will still catch your train.</em></p>
 </HisyeoTabs>
 
@@ -172,7 +172,7 @@ in addition to that, it is also using either the perfective marker or another
 thematic constituent is indicating that this clause is in the past tense.
 
 <HisyeoTabs>
-    <p>hôn fos nîmû bît xokûlû sî noyo, û noyo bît li sî lô.&emsp;<em>If you had called me, I would have come.</em></p>
+    <p>hôn fos nîmû bît xokûlû sî noyo, û noyo bît li sî nô.&emsp;<em>If you had called me, I would have come.</em></p>
     <p>nîo bît li sî bîlûs hôn fos noyo bît li sî yôûlî mût nîo ko.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
 </HisyeoTabs>
 
@@ -190,9 +190,9 @@ expressed as being limited to the past, the antecedent clause is expressed as in
 the Second Conditional, while the main clause is like the Third Conditional.
 
 <HisyeoTabs>
-    <p>hôn fos nîmû bît tûu sî wêloi bi dûndon, nû bît yûnyoû yôk îxôlô ôfo bi îbûdû.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hôn fos nîmû bît tûu sî wêloi bi dûndon, nûs bît yûnyoû yôk îxôlô ôfo bi îbûdû.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
     <p>hôn fos noyo bît li sî êo hûnsûon ôlê umo Keli, noyo bît niwos yôk hoî kûôcyo Elvu bi îbûdû.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
-    <p>hôn fos nû bît li umo gûexo bi ôhêl, nû bît tûu sî yôk ni misli ulyô.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
+    <p>hôn fos nûs bît li umo gûexo bi ôhêl, nûs bît tûu sî yôk ni misli ulyô.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
 
 :::
@@ -207,7 +207,7 @@ rectify the state of things.
 
 <HisyeoTabs>
     <p>noyo kûu li yôûlî mût nîmû.&emsp;<em>I ought to help you.</em></p>
-    <p>nû kûu li lô ze.&emsp;<em>Let's go!</em></p>
+    <p>nûs kûu li nô ze.&emsp;<em>Let's go!</em></p>
     <p>kûu gomî oksûn ulyô.&emsp;<em>Don't take that meat.</em></p>
     <p>û yûbik noyo kûu li gô ofek nîmû lôtfen.&emsp;<em>May my love be with you.</em></p>
 </HisyeoTabs>
@@ -224,7 +224,7 @@ tense**.
 <HisyeoTabs>
     <p>umo Zon ke li cok hoî bitûn ôfo.&emsp;<em>John is going to leave tonight.</em></p>
     <p>noyo ke golo tômôs onô.&emsp;<em>I will/shall read the book</em></p>
-    <p>nû kûu fohoso ulyô, nû ke tûu ko. &emsp;<em>Let us examine that, shall we?</em></p>
+    <p>nûs kûu fohoso ulyô, nûs ke tûu ko. &emsp;<em>Let us examine that, shall we?</em></p>
     <p>kut yê umo kôlmûdul ke monodo nîmû hoî lono uklo.&emsp;<em>One of our salesmen will visit you tomorrow.</em></p>
 </HisyeoTabs>
 
@@ -259,7 +259,7 @@ The negatitive verb modifier (<HisyeoWord is='yôk'/>) turns the verb phrase
 into the negated version of itself. In English, this is the "not" adverb.
 
 <HisyeoTabs>
-    <p>hôn xe yôk zûyi ozûul yonlûs, noyo li sî lô bi fôhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
+    <p>hôn xe yôk zûyi ozûul yonlûs, noyo li sî nô bi fôhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
     <p>nîmû buswen yôk xe xontûn cizî.&emsp;<em>You don’t need to trouble yourself.</em></p>
     <p>môtîfô yôcno li yôk xe funsût.&emsp;<em>The objective is not to lose.</em></p>
     <p>kûu tûu yôk ulyô.&emsp;<em>Don't do that.</em></p>
