--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -229,7 +229,7 @@ Some basic words to get you started on sentence construction.
 <HisyeoTabs>
    <p>noyo&emsp;<em>I</em></p>
    <p>nîmû&emsp;<em>you</em></p>
-   <p>nû&emsp;<em>we</em></p>
+   <p>nûs&emsp;<em>we</em></p>
    <p>nîo&emsp;<em>they</em></p>
 </HisyeoTabs>
 
