--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -34,7 +34,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo xowosê bi êto bi oltû ôîtun.&emsp;<em>Happy people often shout.</em></p>
 <p>mocko xonluk onô tûu sî zoston bi cên.&emsp;<em>The kitten jumped up.</em></p>
 <p>mocko xonluk onô tûu sî zoston mût solwôc mîêbil.&emsp;<em>The kitten jumped onto the table.</em></p>
-<p>mocko xonluk cûtî noyo li sî lô bi cok. &emsp;<em>My little kitten walked away.</em></p>
+<p>mocko xonluk cûtî noyo li sî nô bi cok. &emsp;<em>My little kitten walked away.</em></p>
 <p>li hûzon bi môcîbo.&emsp;<em>It's raining.</em></p>
 <p>hûzon onô dî sî sêl.&emsp;<em>The rain came down.</em></p>
 <p>mocko xonluk onô bi môcîbo kelo hoî hûzon onô.&emsp;<em>The kitten is playing in the rain.</em></p>
@@ -43,16 +43,16 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo xîwon fos bi zelen nîltûgu hûzon onô.&emsp;<em>I hope the rain stops soon.</em></p>
 <p>bi kut û zonwul hônyo niwos sî ôfo.&emsp;<em>Once wild animals lived here.</em></p>
 <p>bi dîlê û nîo fohoso sî ûnhilun nîo.&emsp;<em>Slowly she looked around.</em></p>
-<p>kûu li lô bi cok.&emsp;<em>Go away!</em></p>
-<p>nû kûu li lô.&emsp;<em>Let's go!</em></p>
-<p>nîmû kûu li lô.&emsp;<em>You should go.</em></p>
-<p>noyo ke li xowosê hôn xe li lô.&emsp;<em>I will be happy to go.</em></p>
+<p>kûu li nô bi cok.&emsp;<em>Go away!</em></p>
+<p>nûs kûu li nô.&emsp;<em>Let's go!</em></p>
+<p>nîmû kûu li nô.&emsp;<em>You should go.</em></p>
+<p>noyo ke li xowosê hôn xe li nô.&emsp;<em>I will be happy to go.</em></p>
 <p>nîo ke li gîk bi zelen.&emsp;<em>He will arrive soon.</em></p>
 <p>gundolê yê lôzîc onô li sî tulkolyun bi cok.&emsp;<em>The baby's ball has rolled away.</em></p>
 <p>dûî umo moskûl xonluk onô wêloi bi môcîbo ofek xokôn dîzel.&emsp;<em>The two boys are working together.</em></p>
 <p>ûsmon xîmu onô bi kônên ke dî fonmot.&emsp;<em>This mist will probably clear away.</em></p>
 <p>înbolî hosîn li nîôk hoî xokôn.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
-<p>nû kûu mokon bi dîlê eswen.&emsp;<em>We should eat more slowly.</em></p>
+<p>nûs kûu mokon bi dîlê eswen.&emsp;<em>We should eat more slowly.</em></p>
 <p>nîmû dî sî hoî ôfo bi hêlxun otikon.&emsp;<em>You have come too soon.</em></p>
 <p>nîmû kûu cukto bi mûfêû eswen.&emsp;<em>You must write more neatly.</em></p>
 <p>hôn elentêt mûstokîn li totsi û niwos moxo cênbô kûzoû.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
@@ -60,10 +60,10 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>mocko noyo li nêlô.&emsp;<em>My cat is black.</em></p>
 <p>dôcuî umo yê umo wohî xonluk cûtî onô li kobût.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>noyo bi sodolun li conzodo sunbûlno.&emsp;<em>I usually sleep soundly.</em></p>
-<p>mênyûu onô bi fîkî li lô oxon xe doîcêl umo Zek.&emsp;<em>The children ran after Jack.</em></p>
+<p>mênyûu onô bi fîkî li nô oxon xe doîcêl umo Zek.&emsp;<em>The children ran after Jack.</em></p>
 <p>noyo kôî kelo cihôû kon bêûdo.&emsp;<em>I can play after school.</em></p>
-<p>nû li sî lô mût sinsî oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
-<p>nû li sî gîk hoî xûto.&emsp;<em>We arrived at the river.</em></p>
+<p>nûs li sî nô mût sinsî oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
+<p>nûs li sî gîk hoî xûto.&emsp;<em>We arrived at the river.</em></p>
 <p>noyo motsi sî bi môcîbo oxon nîmû.&emsp;<em>I have been waiting for you.</em></p>
 <p>ônî mûhoyon onô sityo sî hoî ûnhilun yê môtô onô.&emsp;<em>The campers sat around the fire.</em></p>
 <p>umo wohî xonluk cûtî xe ofek mocko xonluk, sityo sî hoî fêlkonô noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
@@ -76,20 +76,20 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nîmû kôî li gîk hoî lono uklo ko.&emsp;<em>Can you come tomorrow?</em></p>
 <p>ônî niwos fêlkonô li sî cok hôn yogô ûsên cunyû.&emsp;<em>Have the neighbors gone away for the winter?</em></p>
 <p>tîmîok hûnsik bi sodolun kontol hoî hûzon ko.&emsp;<em>Does the robin sing in the rain?</em></p>
-<p>nîmû li lô ofek nû mût sîkîn kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
+<p>nîmû li nô ofek nûs mût sîkîn kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
 <p>nîmû hoî ozûul wokût tuluti bîômu nomû hûzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
-<p>nû oûtô tô woyû mût cên yê xûto onô lon yoûtî mônbili xokôn.&emsp;<em>We sailed down the river for several miles.</em></p>
+<p>nûs oûtô tô woyû mût cên yê xûto onô lon yoûtî mônbili xokôn.&emsp;<em>We sailed down the river for several miles.</em></p>
 <p>xokôn umo fisun kon wêtodû.&emsp;<em>Everybody knows about hunting.</em></p>
-<p>hoî lono kûon xe cihôû wokût fos bînton lono socok xe dî fêlkonô eswen, û nû socok sî mût tohilôk bûmî.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
+<p>hoî lono kûon xe cihôû wokût fos bînton lono socok xe dî fêlkonô eswen, û nûs socok sî mût tohilôk bûmî.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
 <p>umo Ton li sî lîûlê nênko cûlcî yê fonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
-<p>umo moskûl nokdo xe ofek nûyo yê kon lô wowoê, li sî totsi hoî sôbo yê bêlêtê gosîl.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
+<p>umo moskûl nokdo xe ofek nûyo yê kon nô wowoê, li sî totsi hoî sôbo yê bêlêtê gosîl.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
 <p>ôlê niwos yê cûî nomû li sî êo ficwo û tolên nomû weltô.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
 <p>oûdî cûtî motsi sî bi sontî hoî sêl yê bôlfêlê hûzon bukû mût bînton lono yê yogô ûsên nîôk et yê tût yoûtî.&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
 <p>êto umo wohî xonluk xe ofek wutun înbolî xe hoî wîk, li cifulo hoî ûnhilun yê môtô fîmôsyôs.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
 <p>ônî doknû onô yê dibo yê hûlû in zohît et onô li sî zîgîl mût sokofû.&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>umo moskûl xonluk kut onô yê gîto onô nîltûgu sî hoî zinkon kon gîk.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
 <p>hoî solwôc yê tôxûtsi bûmî hoî lîmîen yê niwos cûtî niwos sî û umo wohî nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
-<p>hoî wokût yê kon niwos yê fenûo londuluk onô û nû bi êto li lô tô wowoê hoî comen zonwul onô.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
+<p>hoî wokût yê kon niwos yê fenûo londuluk onô û nûs bi êto li nô tô wowoê hoî comen zonwul onô.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
 <p>hoî wokût zik û monodo sûn sinsî cênbô ke li gîk.&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>hoî fêlkonô yê gôyu onô yê xûto onô û tîton ni li sî infultîn bi cîes mût kilukû.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gitno dûî tohilôk bûmî iwotê li tigoyo û fenûo sûbôl yê bûmî sêl.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
@@ -109,7 +109,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>motûo moskûl yê umo moskûl xonluk cûtî bi kut fun li sî ônî tuluti xômûtlô.&emsp;<em>The little boy's father had once been a sailor.</em></p>
 <p>noyo nocîdo sî lîbû bolce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
 <p>tîmîok yê wikse cinôbu kôson sî niwos nîo hoî nomû onô yê kûôxi hûnsik sûwît.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
-<p>hoî mutyu lono û nû mokon sî côûfon nû hoî sôbo tîton.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
+<p>hoî mutyu lono û nûs mokon sî côûfon nûs hoî sôbo tîton.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
 <p>umo Zônsu kôs sî ônî wêtû oxon umo moskûl xonluk cûtî nîo.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
 <p>êtsô yê ôîtun nîo li xoînbo yê xowosê êto.&emsp;<em>Their voices sound very happy.</em></p>
 <p>lono ôfo li lono dûsul ko.&emsp;<em>Is today Monday?</em></p>
@@ -123,18 +123,18 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûu tenkîn.&emsp;<em>Listen.</em></p>
 <p>kûu sityo ôfo yê fêlkonô noyo.&emsp;<em>Sit here by me.</em></p>
 <p>ôlê ôfo kûu li êo cosnî môcîbo ilik lono uklo.&emsp;<em>Keep this secret until tomorrow.</em></p>
-<p>kûu li cok ofek nû.&emsp;<em>Come with us.</em></p>
+<p>kûu li cok ofek nûs.&emsp;<em>Come with us.</em></p>
 <p>kûu okôt sûtûô nîmû ofek nîmû.&emsp;<em>Bring your friends with you.</em></p>
 <p>kûu dîyondê bi cônkôk.&emsp;<em>Be careful.</em></p>
 <p>kûu yûnyoû yoûtî îskô hôncôû.&emsp;<em>Have some tea.</em></p>
 <p>umo Bipu ûn zowo nîo li sî sûtûô êto.&emsp;<em>Pip and his dog were great friends.</em></p>
 <p>umo Zon ûn umo Ilisopet li siskin.&emsp;<em>John and Elizabeth are brother and sister.</em></p>
-<p>nîmû ûn noyo ke li lô ofek xokôn dîzel.&emsp;<em>You and I will go together.</em></p>
+<p>nîmû ûn noyo ke li nô ofek xokôn dîzel.&emsp;<em>You and I will go together.</em></p>
 <p>nîo li êo but ôlê môî zinkon ûn kûmun obokî.&emsp;<em>They opened all the doors and windows.</em></p>
 <p>nîo li cûtî lêkin len.&emsp;<em>He is small, but strong.</em></p>
 <p>mût nomû ôfo tô hîskûnco İngulic somo nomû Ôk yodo nomû Mêpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
 <p>okoxu li xoînbo in dêko misli zôî yodo dûsul ko.&emsp;<em>Does the sky look blue or gray?</em></p>
-<p>kûu li lô ofek motûo moskûl yodo motûo wohî.&emsp;<em>Come with your father or mother.</em></p>
+<p>kûu li nô ofek motûo moskûl yodo motûo wohî.&emsp;<em>Come with your father or mother.</em></p>
 <p>noyo li bîcûon lêkin li xowosê êto.&emsp;<em>I am tired, but very happy.</em></p>
 <p>nîo kelo kontol tô yôn in kontol yê môkôfo in ûslêk et kûzoû nîo.&emsp;<em>He played a tune on his wonderful flute.</em></p>
 <p>mût kônyêc yê wuto tukwos û lono dî êto gosîl eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
@@ -149,7 +149,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nîo côûfon lîsîk yê hûlû côt iwotê mût dumoko bînê sityo hoî ûnhilun yê môtô ûn mokon ni.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
 <p>nîo li sî bîlûs hoî dûî kelo kut lêkin nocîdo ni fêlcîn.&emsp;<em>They won the first two games, but lost the last one.</em></p>
 <p>kûu gomî lîbû ôfo yê kôto fos cukto sî, kûu okôt mût motûo wohî nîmû bînê kûu motsi zuwobû.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
-<p>noyo dî sî wîlî bi hêlxun ôntôn sî bi fîkî ûn li sî lô sêl mût côûfon kut.&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
+<p>noyo dî sî wîlî bi hêlxun ôntôn sî bi fîkî ûn li sî nô sêl mût côûfon kut.&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
 <p>o. noyo doîcêl sî nîmû foxo.&emsp;<em>Aha! I have caught you!</em></p>
 <p>doî ôfo li otikon gosîl ze.&emsp;<em>This string is too short!</em></p>
 <p>oiyo. woyû ûslêk sî ônî doknû wîk noyo bi mônbili.&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
@@ -157,18 +157,18 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>oiyo. woyû cunyû ulyô li êo bukû ôlê nosîko noyo foxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
 <p>nîmû li zôtêstô tût bi îbûdû ko.&emsp;<em>Are you warm enough now?</em></p>
 <p>nîo tenkîn sî gongoxî hoî otikon mûun.&emsp;<em>They heard the warning too late.</em></p>
-<p>nû li umo môfî yûbik fenûo nû.&emsp;<em>We are a brave people, and love our country.</em></p>
+<p>nûs li umo môfî yûbik fenûo nûs.&emsp;<em>We are a brave people, and love our country.</em></p>
 <p>môî mênyûu li sî gîk lêkin mênyûu Meli.&emsp;<em>All the children came except Mary.</em></p>
 <p>umo Zek ogolol zûngô mûlû yê îbûwê cûtî lunsol ni mût zomo xîmu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
 <p>niwos cômêl ôfo li sî totsi hoî tôxûtsi bûmî sêl hoî yoûtî mônbili xe sûn sinsî onô.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
 <p>hoî bitûn hêlxun xôn yê yogô ûsên tût û dûî umo nokdo sityo hoî wokto yê zinkon onô yê niwos cômêl nîo.&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
-<p>mût tîmîok nû somo tîmîok Zekô.&emsp;<em>Our bird's name is Jacko.</em></p>
+<p>mût tîmîok nûs somo tîmîok Zekô.&emsp;<em>Our bird's name is Jacko.</em></p>
 <p>xûto onô fisun tîton onô mût xômûtlô.&emsp;<em>The river knows the way to the sea.</em></p>
-<p>oûtô xîmu li lô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
+<p>oûtô xîmu li nô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
 <p>nîo dêko sî bi êto dîyondê hoî môî ûnhilun lêkin dêko yôk fin.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
 <p>niwos cûtî yûnyoû sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
-<p>nû monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
-<p>nû bêûdo fin nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
+<p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
+<p>nûs bêûdo fin nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
 <p>socok gufuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>nîmû yosten sî otikon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
 <p>kûu li fîkî noî umo xonluk.&emsp;<em>Hurry, children.</em></p>
@@ -177,30 +177,30 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>hôn yogô ûsên cunyû û noyo dî wîlî hoî bitûn ôntôn tô kûon fûus sêlbô.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
 <p>kûu kôto yogô fêlcîn yê kîso ulyô bi dîzel.&emsp;<em>Tell the last part of that story again.</em></p>
 <p>kûu li fîkî yodo û nîmû ke li otikon mûun.&emsp;<em>Be quick or you will be too late.</em></p>
-<p>nîmû ke li lô ofek nû ko yodo motsi hoî ôfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
-<p>nîo bi môî wokût ôntôn fin yê êtsô bîs et fos bi sodolun ôlê ni li sî êo funlît hoî dînzoû, ûn hoî lono cunyû li yôk lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
+<p>nîmû ke li nô ofek nûs ko yodo motsi hoî ôfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
+<p>nîo bi môî wokût ôntôn fin yê êtsô lôc et fos bi sodolun ôlê ni li sî êo funlît hoî dînzoû, ûn hoî lono cunyû li yôk lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
 <p>kûu gonîso bi kut bînê kûu tûu.&emsp;<em>Think first and then act.</em></p>
 <p>noyo li sî totsi misli mûxî cûtî yê umo wohî xonluk hoî sityo xe li uklo mût kûmun obokî, ûn dêko sî bôlfêlê xîmu bukû zîgîl.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
 <p>mût monodo onô kûu mônîso bêîku ôfo noî mênyûu noyo ûn mût nîo kûu kôto itihos gonzîl ni.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
 <p>kûu li xowosê hôn xûnyu fin lêkin hôn xôn môî nîmû.&emsp;<em>Be satisfied with nothing but your best.</em></p>
-<p>nû gonîso nîo misli sûtûô côûnton nû.&emsp;<em>We consider them our faithful friends.</em></p>
-<p>nû ôlê boxô ôfo ke li êo niwos nû.&emsp;<em>We will make this place our home.</em></p>
+<p>nûs gonîso nîo misli sûtûô côûnton nûs.&emsp;<em>We consider them our faithful friends.</em></p>
+<p>nûs ôlê boxô ôfo ke li êo niwos nûs.&emsp;<em>We will make this place our home.</em></p>
 <p>cûî nomû onô ôlê niwos nîo li êo tût ûn lohot tô fôdoloc nulun ûn woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
 <p>umo wohî cûtî kôson ôntôn yê dôcuî umo tô cizî nîo.&emsp;<em>The little girl made the doll's dress herself.</em></p>
 <p>noyo li êo tônkô ôlê cizî noyo.&emsp;<em>I hurt myself.</em></p>
 <p>hoî ôhêl nîo kôto mût cizî nîo.&emsp;<em>She was talking to herself.</em></p>
 <p>nîo mônîso sî cizî nîo xe kôî li oksîôs yê îmon.&emsp;<em>He proved himself trustworthy.</em></p>
-<p>nû kôî dêko cizî nû hoî xîmu.&emsp;<em>We could see ourselves in the water.</em></p>
+<p>nûs kôî dêko cizî nûs hoî xîmu.&emsp;<em>We could see ourselves in the water.</em></p>
 <p>kûu tûu ni tô cizî nîmû.&emsp;<em>Do it yourself.</em></p>
 <p>noyo oncêmon xulmindo yê noyo.&emsp;<em>I feel ashamed of myself.</em></p>
 <p>kûu sityo hoî ôfo ofek cizî nîmû tôlkî.&emsp;<em>Sit here by yourself.</em></p>
 <p>û ôntôn yê mênyûu wohî cûtî yê hondon kon hûkun li fos mût ni zohît sî înbolî xe li înbolî centik yê kûôcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
 <p>nîo ôntôn sî ôntôn wîk hûnsik xe li ostok onô yê fôlnî.&emsp;<em>They wore red caps, the symbol of liberty.</em></p>
-<p>ofek nîo xe misli foko mefûs nû, nû li yôk ôsôlê yê bongôsî.&emsp;<em>With him as our protector, we fear no danger.</em></p>
+<p>ofek nîo xe misli foko mefûs nûs, nûs li yôk ôsôlê yê bongôsî.&emsp;<em>With him as our protector, we fear no danger.</em></p>
 <p>môî fin moxo nîo xe li bolce kûmun li lîsto li towê, li fos bi cîes wêko sî ni hoî dibo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
 <p>li sî xoînbo û fos nîo wohî li hulûkô, oldis gonîso yê nîo moskûl misli towê tîmîok.&emsp;<em>Light he thought her, like a feather.</em></p>
-<p>hôn xokôn yogô ûsên nîôk ûn yogô ûsên kon kudûdo û mênyûu yê siskin motûo et nû cifû kon monodo kîldo mût nû.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
-<p>hoî bîômu kêlôs nû û hûlû onô bi môcîbo li lûntî hôn yogô ûsên cunyû.&emsp;<em>In our climate the grass remains green all winter.</em></p>
+<p>hôn xokôn yogô ûsên nîôk ûn yogô ûsên kon kudûdo û mênyûu yê siskin motûo et nûs cifû kon monodo kîldo mût nûs.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
+<p>hoî bîômu kêlôs nûs û hûlû onô bi môcîbo li lûntî hôn yogô ûsên cunyû.&emsp;<em>In our climate the grass remains green all winter.</em></p>
 <p>umo moskûl xonluk onô xe okôt sî tômôs onô, li sî cok.&emsp;<em>The boy who brought the book has gone.</em></p>
 <p>ôfo li înbolî onô fos nîo li sî êo kôlmûdul ôlê ni.&emsp;<em>These are the flowers that you ordered.</em></p>
 <p>noyo nocîdo sî tômôs onô fos nîo mût noyo cûdo ni.&emsp;<em>I have lost the book that you gave me.</em></p>
@@ -215,19 +215,19 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo yûnyoû sî siskin moskûl yê xonluk eswen et Ontônîô.&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
 <p>li umo cûtî Gunôn xe niwos bûmî sêl.&emsp;<em>Gnomes are little men who live under the ground.</em></p>
 <p>xokôn umo yûbik nîo nênko wêîlun xêntîl nîo.&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
-<p>kûu ogolol kûdu onô bînê noyo kôî li lô ogolol ôntôn wîk noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
+<p>kûu ogolol kûdu onô bînê noyo kôî li nô ogolol ôntôn wîk noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
 <p>noyo yosten sî wutun zîxîtû onô fos noyo nocîdo.&emsp;<em>I have found the ring I lost.</em></p>
 <p>kûu kontol ûn noyo ke kontol bi ôîtun.&emsp;<em>Play and I will sing.</em></p>
 <p>ulyô li kîso yê yoûmok môî et onô en fos noyo hoî xokôn wokût tenkîn sî.&emsp;<em>That is the funniest story I ever heard.</em></p>
 <p>nîo wohî li iwotê eswen en siskin moskûl nîo.&emsp;<em>She is taller than her brother.</em></p>
-<p>nîo li yôk colot eswen en nû.&emsp;<em>They are no wiser than we.</em></p>
+<p>nîo li yôk colot eswen en nûs.&emsp;<em>They are no wiser than we.</em></p>
 <p>kûon tuluti bi fîkî eswen en tenkîn.&emsp;<em>Light travels faster than sound.</em></p>
-<p>nû yûnyoû wokût eswen en nîo.&emsp;<em>We have more time than they.</em></p>
+<p>nûs yûnyoû wokût eswen en nîo.&emsp;<em>We have more time than they.</em></p>
 <p>nîo yûnyoû sûtûô eswen en umo xe dên nîo.&emsp;<em>She has more friends than enemies.</em></p>
 <p>nîo yûnyoû munî yê cûtî êto ûn ofek hûnsûon nîo ûn tîû mênyûu niwos boxô sêl cûtî yê môkôfo nomû ûn îbûwê.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
 <p>hoî fos woyû ûslêk sî, ônî tuluti onô ôlê ôntôn lîbû ûnhilun sî nîo bi fêlkonô eswen.&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
-<p>noyo li gufis hôn fos nû kôî li lô.&emsp;<em>I am sure that we can go.</em></p>
-<p>nû li sî dukwêlit mût boxô fos nû dêko sî înbolî onô hoî.&emsp;<em>We went back to the place where we saw the roses.</em></p>
+<p>noyo li gufis hôn fos nûs kôî li nô.&emsp;<em>I am sure that we can go.</em></p>
+<p>nûs li sî dukwêlit mût boxô fos nûs dêko sî înbolî onô hoî.&emsp;<em>We went back to the place where we saw the roses.</em></p>
 <p>"nomû ôfo li cên yê tîû dus kîldo xokôn," li fos ônî lîun gos kôto sî.&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
 <p>noyo gonîso fos û oûtô kîskô ôfo li cok hoî tîû êfun yê hêlxun eswen hôn lono ôfo.&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
 <p>û gonîso noyo li fos ônî bôklôn ke cûdo yûnlôn mût nîo.&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
