--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -16,27 +16,13 @@ read on!
 
 ## How can I join the community?
 
-There isn't an online community yet built for this here language. We are working
-on a public discord community that will have levels that you can earn as you
-grow in the language.
-
-In addition to this enterprise, we also seek to grow the language in the public
-domain. A set of courses and tests are being developed that follow the six
-levels of the
-[CEFR](https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages)
-standard. Eventually, some of lower course certificates and tests will
-supplement the manually-curated community priveleges.
-
-## Are there any other communities?
-
 Here are all of the places that Hîsyêô has a place.
 
-- Telegram
 - [Reddit](https://www.reddit.com/r/hisyeo/)
-- Matrix
+- [Matrix](https://matrix.to/#/#hisyeo:matrix.org)
+- [Discord](https://discord.gg/48mUPRan9G)
 - [Mastodon](https://mastodon.social/@hisyeo)
-- YouTube 
-- GitHub Discussions
+- [GitHub Discussions](https://github.com/orgs/Hisyeo/discussions)
 
 ## I'd like to contribute
 
