Add mini code of conduct to community page

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -14,9 +14,20 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 So, you've decided that you want to learn and be part of this community? Well,
 read on!
 
+## Expectations
+
+We expect members of the community, in addition to any code of conduct present
+within a specific location, to also be mindful of these values of the Hîsyêô
+community:
+
+- be kind and gentle with new leaners
+- don't police correct grammar, follow correct grammar yourself
+- participate with active listening and engaging responses
+- remember that *everyone* that seeks to learn Hîsyêô matters and should be cherished
+
 ## How can I join the community?
 
-Here are all of the places that Hîsyêô has a place.
+Here are all of the sites/apps where Hîsyêô has a presence:
 
 - [Reddit](https://www.reddit.com/r/hisyeo/)
 - [Matrix](https://matrix.to/#/#hisyeo:matrix.org)
