improve community page contribute section

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -23,7 +23,8 @@ community:
 - be kind and gentle with new leaners
 - don't police correct grammar, follow correct grammar yourself
 - participate with active listening and engaging responses
-- remember that *everyone* that seeks to learn Hîsyêô matters and should be cherished
+- remember that *everyone* that seeks to learn Hîsyêô matters and should be
+  cherished
 
 ## How can I join the community?
 
@@ -37,9 +38,10 @@ Here are all of the sites/apps where Hîsyêô has a presence:
 
 ## I'd like to contribute
 
-We'd love for you to join our mission! There are outstanding tickets in various
+We'd love for you to join our mission! Community participation is a central
+tenet of the Hîsyêô community. There may be outstanding tickets in various
 projects in our GitHub organization. There are also numerous public domain works
-that can be translated and, if you're interested, hosted in this site. We'd also
-be glad to link to content hosted elsewhere.
+that can be translated and, if you're interested, hosted on this site or within
+the github organization. We'd also be glad to link to content hosted elsewhere.
 
 <HisyeoTooltip/>
